--- a/src/app/components/admin/admin-calendar/admin-calendar-list/admin-calendar-list.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-list/admin-calendar-list.component.html
@@ -13,7 +13,8 @@
                 <a [routerLink]="['/admin/calendar/new']"
                    class="btn btn-default">
                     <i class="fa fa-calendar-plus"></i>&nbsp;
-                    New Event</a>
+                    New Calendar
+                </a>
             </div>
         </div>
     </div>
@@ -31,47 +32,50 @@
                 <table id="user-list" class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
-                        <th scope="col" style="vertical-align: top;">Column #</th>
-                        <th scope="col" style="vertical-align: top;">Date</th>
+
                         <th scope="col" style="vertical-align: top;">Title</th>
-                        <th scope="col" style="vertical-align: top;">Start Time</th>
-                        <th scope="col" style="vertical-align: top;">End Time</th>
+                        <th scope="col" style="vertical-align: top;">Date</th>
+                        <th scope="col" style="vertical-align: top;">Body</th>
                         <th scope="col" style="vertical-align: top;">Edit</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr *ngFor="let event of calendarEvents$ | async;">
-                        <td scope="col">
-                            <a routerLink="/admin/calendar/{{event.$key}}/edit"
-                               class="text-dark">
-                                <i class="fa fa-calendar"></i> {{ event.column }}
-                            </a>
-                        </td>
-                        <td scope="col">
-                            <a routerLink="/admin/calendar/{{event.$key}}/edit"
-                               class="text-dark">
-                                <i class="fa fa-calendar-check"></i> {{ event.date | date:'fullDate' }}
-                            </a>
-                        </td>
+                    <tr *ngFor="let event of calendarEvents$">
                         <td scope="col">
                             <a routerLink="/admin/calendar/{{event.$key}}/edit"
                                class="text-dark">
                                 {{ event.title }}
                             </a>
                         </td>
-                        <td scope="col" style="text-align:center;">
-                            <span class="badge badge-outline-default">
-                               <i class="fa fa-alarm-clock"></i> {{ event.startTime | date:'shortTime' }}
-                            </span>
-                        </td>
-                        <td scope="col" style="text-align:center;">
-                            <span class="badge badge-outline-default">
-                               <i class="fal fa-alarm-clock"></i> {{ event.endTime | date:'shortTime' }}
-                            </span>
-                        </td>
-                        <td>
+                        <td scope="col">
                             <a routerLink="/admin/calendar/{{event.$key}}/edit"
-                               class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip">
+                               class="text-dark dates">
+                                <span *ngIf="event.date1">
+                                    <i class="fa fa-calendar-check"></i> {{ event.date1.toDate() | date }}
+                                </span> <br>
+                                <span *ngIf="event.date2">
+                                    <i class="fa fa-calendar-check"></i> {{ event.date2.toDate() | date }}
+                                </span> <br>
+                                <span *ngIf="event.date3">
+                                    <i class="fa fa-calendar-check"></i> {{ event.date3.toDate() | date }}
+                                </span><br>
+                                <span *ngIf="event.date4">
+                                    <i class="fa fa-calendar-check"></i> {{ event.date4.toDate() | date }}
+                                </span><br>
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a routerLink="/admin/calendar/{{event.$key}}/edit"
+                               class="text-dark dates text-truncate">
+                                <i class="fa fa-align-justify"></i> {{ event.body1 | slice:0:70 }} <br>
+                                <i class="fa fa-align-justify"></i> {{ event.body2 | slice:0:70 }} <br>
+                                <i class="fa fa-align-justify"></i> {{ event.body3 | slice:0:70 }} <br>
+                                <i class="fa fa-align-justify"></i> {{ event.body4 | slice:0:70 }} <br>
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a routerLink="/admin/calendar/{{event.$key}}/edit"
+                               class="btn btn-default icon-btn md-btn-flat user-tooltip">
                                 <i class="fa fa-pencil"></i>&nbsp;
                             </a>
                         </td>
