--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i|Roboto:400,400i,500,500i|Muli:800,900');
 
 /* Front Pages */
-p, li  {
+p, li {
     font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;
     line-height: 2;
     font-size: 18px;
@@ -13,7 +13,6 @@ h1, h2, h3 {
     font-family: Roboto, Helvetica, Arial, sans-serif;
     font-weight: 500;
 }
-
 
 p > a:link, li > a:link {
     color: #2e6da4;
@@ -31,6 +30,12 @@ a.page-link {
 }
 
 /* Theme colors */
+
+p.alert, .flash-messages * {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    font-size: 14px;
+    line-height: 1.5;
+}
 
 .bg-dark {
     background-color: #1C202B;
@@ -76,7 +81,6 @@ a.page-link {
 .lg-quote {
     font-size: 32px;
 }
-
 
 /* Application wide Styles */
 body {
