missing value for build/deploy

--- a/src/app/components/admin/admin-calendar/admin-calendar-item/admin-calendar-item.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-item/admin-calendar-item.component.html
@@ -2,10 +2,10 @@
 
 <div class="row">
     <div class="col-md-2">
-        {{ calendar.startTime }}
+        {{ calendar.title }}
     </div>
     <div class="col-md-10">
-        <h5>{{ calendar.title }}</h5>
-        <p>{{ calendar.body }}</p>
+        <h5>{{ calendar.date1 }}</h5>
+        <p>{{ calendar.body1 }}</p>
     </div>
 </div>
