--- a/src/app/components/admin/admin-calendar/admin-calendar-list/admin-calendar-list.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-list/admin-calendar-list.component.html
@@ -67,10 +67,10 @@
                         <td scope="col">
                             <a routerLink="/admin/calendar/{{event.$key}}/edit"
                                class="text-dark dates text-truncate">
-                                <i class="fa fa-align-justify"></i> {{ event.body1 | slice:0:70 }} <br>
-                                <i class="fa fa-align-justify"></i> {{ event.body2 | slice:0:70 }} <br>
-                                <i class="fa fa-align-justify"></i> {{ event.body3 | slice:0:70 }} <br>
-                                <i class="fa fa-align-justify"></i> {{ event.body4 | slice:0:70 }} <br>
+                                <i class="fa fa-align-justify"></i> {{ event.body1 | slice:0:70 }}... <br>
+                                <i class="fa fa-align-justify"></i> {{ event.body2 | slice:0:70 }}... <br>
+                                <i class="fa fa-align-justify"></i> {{ event.body3 | slice:0:70 }}... <br>
+                                <i class="fa fa-align-justify"></i> {{ event.body4 | slice:0:70 }}... <br>
                             </a>
                         </td>
                         <td scope="col">
