--- a/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
@@ -72,14 +72,23 @@
                                 </mat-panel-description>
                             </mat-expansion-panel-header>
                             <div class="form-group">
-                                <label>Date 1</label>
-                                <input type="text"
-                                       class="form-control"
-                                       bsDatepicker
-                                       placement="top"
-                                       required
-                                       formControlName="date1"
-                                       [bsConfig]="bsConfig"/>
+                                <label class="sr-only"
+                                       for="date1">Select Date 1</label>
+                                <div class="input-group mb-2">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="fa fa-calendar-alt"></i>
+                                        </div>
+                                    </div>
+                                    <input type="text"
+                                           class="form-control"
+                                           id="date1"
+                                           placeholder="Select Date 1"
+                                           bsDatepicker
+                                           placement="top"
+                                           formControlName="date1"
+                                           [bsConfig]="bsConfig">
+                                </div>
                             </div>
 
                             <div class="form-group">
@@ -104,13 +113,23 @@
                                 </mat-panel-description>
                             </mat-expansion-panel-header>
                             <div class="form-group">
-                                <label>Date 2</label>
-                                <input type="text"
-                                       class="form-control"
-                                       bsDatepicker
-                                       placement="top"
-                                       formControlName="date2"
-                                       [bsConfig]="bsConfig"/>
+                                <label class="sr-only"
+                                       for="date2">Select Date 2</label>
+                                <div class="input-group mb-2">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="fa fa-calendar-alt"></i>
+                                        </div>
+                                    </div>
+                                    <input type="text"
+                                           class="form-control"
+                                           id="date2"
+                                           placeholder="Select Date 2"
+                                           bsDatepicker
+                                           placement="top"
+                                           formControlName="date2"
+                                           [bsConfig]="bsConfig">
+                                </div>
                             </div>
 
                             <div class="form-group">
@@ -135,13 +154,23 @@
                                 </mat-panel-description>
                             </mat-expansion-panel-header>
                             <div class="form-group">
-                                <label>Date 3</label>
-                                <input type="text"
-                                       class="form-control"
-                                       bsDatepicker
-                                       placement="top"
-                                       formControlName="date3"
-                                       [bsConfig]="bsConfig"/>
+                                <label class="sr-only"
+                                       for="date3">Select Date 3</label>
+                                <div class="input-group mb-2">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="fa fa-calendar-alt"></i>
+                                        </div>
+                                    </div>
+                                    <input type="text"
+                                           class="form-control"
+                                           id="date3"
+                                           placeholder="Select Date 3"
+                                           bsDatepicker
+                                           placement="top"
+                                           formControlName="date3"
+                                           [bsConfig]="bsConfig">
+                                </div>
                             </div>
 
                             <div class="form-group">
@@ -165,14 +194,25 @@
                                     Day Four
                                 </mat-panel-description>
                             </mat-expansion-panel-header>
+
                             <div class="form-group">
-                                <label>Date 4</label>
-                                <input type="text"
-                                       class="form-control"
-                                       bsDatepicker
-                                       placement="top"
-                                       formControlName="date4"
-                                       [bsConfig]="bsConfig"/>
+                                <label class="sr-only"
+                                       for="date4">Select Date 4</label>
+                                <div class="input-group mb-2">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="fa fa-calendar-alt"></i>
+                                        </div>
+                                    </div>
+                                    <input type="text"
+                                           class="form-control"
+                                           id="date4"
+                                           placeholder="Select Date 4"
+                                           bsDatepicker
+                                           placement="top"
+                                           formControlName="date4"
+                                           [bsConfig]="bsConfig">
+                                </div>
                             </div>
 
                             <div class="form-group">
