--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -112,16 +112,23 @@
                         </div>
 
                         <div class="form-group">
-                            <label>Publish On
-                                <small>(Click input for datepicker)</small>
-                            </label>
-                            <input type="string"
-                                   class="form-control"
-                                   bsDatepicker
-                                   [bsConfig]="bsConfig"
-                                   placement="bottom"
-                                   [class.invalid]="!f.date.valid && f.date.touched"
-                                   formControlName="date">
+                            <label for="date">Publish On</label>
+                            <div class="input-group mb-2">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fa fa-calendar-alt"></i>
+                                    </div>
+                                </div>
+                                <input type="text"
+                                       class="form-control"
+                                       id="date"
+                                       placeholder="Select Date"
+                                       bsDatepicker
+                                       [bsConfig]="bsConfig"
+                                       placement="bottom"
+                                       [class.invalid]="!f.date.valid && f.date.touched"
+                                       formControlName="date">
+                            </div>
                             <p class="help-block alert alert-warning text-center mt-1"
                                *ngIf="!f.date.valid && f.date.touched">
                                 <b>Date</b> is required!
