--- a/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
@@ -8,7 +8,7 @@
                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
                         <i class="fa fa-calendar"></i>&nbsp;Admin
-                    </span> Calendar Edit
+                    </span> Edit Calendar
                 </h1>
             </div>
         </div>
